# aiml-test

./: pyproject.toml
aiml/: settings.py  urls.py
tokenizer/: views.py
web/: index.html
