[tool.poetry]
name = "aiml-tokenizer"
version = "0.1.0"
description = ""
authors = ["HwiSung Kim <kimhiw123@thewc.co.kr>"]

[tool.poetry.dependencies]
python = "^3.8"
djangorestframework = "^3.13.1"
konlpy = "^0.6.0"
mecab-python = "^1.0.0"
Django = "3.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
